# anki-generator

./: LICENSE.md  README.md  pyproject.toml
prompts/: card_system.md  card_user.md
src/anki_generator/: __init__.py  build_cards.py  build_deck.py
